tests/spec/fail/receiver_builtin_type_parse.aja
fuc (x: int) nope() -> int:
    return x
